<?xml version="1.0"?>
<package>
  <name>nav_sim</name>
  <version>0.0.0</version>
  <description>The nav_sim package for ROS class</description>

  <maintainer email="zjuyinhuan@gmail.com">yinhuan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
